Backend and MySQLDB Test Changes